<resources>
    <string name="app_name">Constructions</string>
    <string name="email">KorisnickoIme</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_not_valid">Korisnicko ime nije validno</string>
    <string name="employee_list">Employee list</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_dont_match">Password don\'t match.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_save">Sačuvaj</string>
    <string name="main_cancel">Ništa</string>
    <string name="contract_date">Datum Ugovora</string>
    <string name="start_project_date">Pocetak Projekta</string>
    <string name="end_project_date">Kraj Projekta</string>
    <string name="project_description">Opis Projekta</string>
    <string name="address">Adresa</string>
    <string name="phone_number">Broj mobitela</string>
    <string name="rank">Rank</string>
    <string name="social_number">JMB</string>
    <string name="e_mail">E-mail</string>
    <string name="birthday">Datum Rođendana</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="profession">Strucno Zanimanje</string>
    <string name="profile">Profil</string>
    <string name="all_employees">Svi zaposleni</string>
    <string name="logout">Logout</string>
</resources>
