<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/activity_main_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/background">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/activity_main_user_photo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/activity_main_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/activity_main_user_photo"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="Hussain Abdelilah"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/activity_main_relative_layout"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/activity_main_relative_layout"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@+id/imageView5"
            android:layout_toRightOf="@+id/imageView5"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/blue"
            android:textSize="17sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/imageView5"
            android:layout_alignStart="@+id/imageView5"
            android:layout_below="@+id/imageView5"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ic_employees" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/imageView5"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/imageView6"
            android:layout_toRightOf="@+id/imageView6"
            android:gravity="center"
            android:text="@string/all_employees"
            android:textColor="@color/blue"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/imageView5"
            android:layout_alignStart="@+id/imageView5"
            android:layout_below="@+id/imageView6"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ic_logout" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/imageView6"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/imageView5"
            android:layout_toRightOf="@+id/imageView5"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>