<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.selma.constructions.Fragments.ProjectInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fragment_project_info_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:src="@drawable/ic_project"
        android:elevation="5dp"/>

    <TextView
        android:id="@+id/fragment_project_info_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/fragment_project_info_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="First project"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fragment_project_info_location"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/fragment_project_info_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_view_shape"
        android:elevation="10dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Sarajevo, BiH"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignTop="@+id/fragment_project_info_name"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/fragment_project_info_name"
        android:src="@drawable/ic_status_green"
        android:layout_toRightOf="@+id/fragment_project_info_name"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fragment_project_info_location"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/contract_date"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="23dp" />

    <TextView
        android:id="@+id/fragment_project_info_contract_date"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/textView7"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@+id/textView7"
        android:background="@drawable/text_view_shape"
        android:elevation="7dp"
        android:gravity="center"
        android:text="10.09.2018"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_marginEnd="15dp"
        android:layout_toRightOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/start_project_date"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/fragment_project_info_start_project_date"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@+id/textView5"
        android:background="@drawable/text_view_shape"
        android:elevation="7dp"
        android:gravity="center"
        android:text="25.09.2018"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_toRightOf="@+id/textView5"
        android:layout_marginEnd="15dp" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/end_project_date"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="40dp" />

    <TextView
        android:id="@+id/fragment_project_info_end_project_date"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginRight="15dp"
        android:layout_toEndOf="@+id/textView3"
        android:background="@drawable/text_view_shape"
        android:elevation="7dp"
        android:gravity="center"
        android:text="25.09.2019"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/project_description"
        android:layout_marginStart="15dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/fragment_project_info_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/text_view_shape"
        android:inputType="textMultiLine"
        android:minHeight="40dp"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="klhsf lkjshf kshd fksdh lk hfdskl hdj lhkfjsd khlsfdj hfsd ljfds hlfksd jfsdlk fjskd lfhjsd flsd jfsldk hfsjkdl fskdl hfkjsdl hfjsdl hfjsd flks hfjsld fhs"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_alignParentLeft="true" />
</RelativeLayout>
